fix category title overflow

--- a/src/compose-action/popup.css
+++ b/src/compose-action/popup.css
@@ -13,18 +13,19 @@
   user-select: none;
 }
 
-#contacts {
-  position: relative;
+#column-2 {
   grid-column: 2;
-  grid-row: 2;
+  grid-row: 1;
+  grid-row-end: 3;
+  position: relative;
 }
 
-#contacts:before {
+#column-2:before {
   content: "";
   position: absolute;
-  top: -2.5rem;
+  top: 0;
   left: -1.15rem;
-  height: calc(100% + 2.5rem);
+  height: 100%;
   width: 0.3rem;
   background: gray;
   border-radius: 0.15rem;
@@ -32,8 +33,6 @@
 }
 
 #category-title {
-  grid-row: 1;
-  grid-column: 2;
   margin: 0;
   font-size: 1rem;
   text-align: right;
